Fixed mobile alignments

--- a/static/style.css
+++ b/static/style.css
@@ -4260,7 +4260,29 @@ a:hover {
 
   .tae-content-wrapper {
     margin-left: 0;
-    padding: 20px;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .koo-full-page-image-side {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url('/static/images/taekook/kookie_side.jpeg'); 
+    opacity: 0.5;
+    filter: brightness(70%) contrast(90%);
+    pointer-events: none;
+    z-index: 0;
+  }
+
+  .koo-content-wrapper {
+    margin-right: 0;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.8);
   }
 
@@ -4342,9 +4364,9 @@ a:hover {
   }
 
   .tkcaption {
-    font-size: 0.6rem;
+    font-size: 0.6rem !important;
   }
-  
+
   .quote-box {
     font-size: 0.6rem;
     padding: 8px;
@@ -4358,11 +4380,10 @@ a:hover {
   }
 
   .rounded-image {
-    border-radius: 15px;
-    width: 100px;
-    height: auto;
+    border-radius: 5px;
+    width: auto;
+    max-height: 100px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    margin-right: 0px;
   }
 
   .side-by-side {
@@ -4379,21 +4400,20 @@ a:hover {
   }
 
   #bamtanintro {
-    max-height: 180px;
-    width: 100%;
+    max-height: 100px;
     object-fit: contain;
   }
 
   .chapter-media {
-    flex-direction: column;
-    gap: 12px;
+    flex-direction: row;
+    gap: 1px;
     margin-bottom: 20px;
   }
 
   #actortaetae, #goldenmaknae, #taekookart {
     height: auto;
-    max-height: 300px;
-    width: 100%;
+    /* max-height: 250px; */
+    width: 80%;
     object-fit: contain;
     border-radius: 12px;
   }
@@ -4405,12 +4425,6 @@ a:hover {
     object-fit: contain;
     border-radius: 12px;
   }
-
-  /* #taekookletter, #taekooklive {
-    height: 200px; 
-    width:auto; 
-    border-radius: 20px;
-  } */
 
   #taekookweverse {
     width:50% !important; 
@@ -4447,8 +4461,9 @@ a:hover {
   .taekook-footer {
     position: relative;
     font-size: 0.9rem;
-    margin-top: 10px;
+    margin-top: 40px;
     box-shadow: none;
+    margin-bottom: 0px;
   }
 }
 
